--- a/source/sass/blocks/step-list.scss
+++ b/source/sass/blocks/step-list.scss
@@ -376,47 +376,15 @@
 
 .step-list__add-plus{
   position: absolute;
-  right: 30px;
-  top: 20px;
+  right: 15px;
+  top: 15px;
 
   @media (min-width: $medium-width) {
-    right: 35px;
-    top: 35px;
+    top: 30px;
   }
-}
 
-.step-list__horizontal-line{
-  position: absolute;
-  background-color: #CCCCCC;
-  left: 14px;
-  top: 20px;
-  width: 14px;
-  height: 2px;
-
-  @media (min-width: $medium-width) {
-    width: 20px;
-    left: 23px;
-    top: 35px;
-  }
-}
-
-.step-list__horizontal-line--plus{
-  left: auto;
-  top: auto;
-}
-
-.step-list__vertical-line{
-  position: absolute;
-  background-color: #CCCCCC;
-  left: 6px;
-  top: -6px;
-  width: 2px;
-  height: 14px;
-
-  @media (min-width: $medium-width) {
-    height: 20px;
-    left: 9px;
-    top: -9px;
+  @media (min-width: $large-width) {
+    right: 20px;
   }
 }
 
