--- a/source/sass/blocks/users.scss
+++ b/source/sass/blocks/users.scss
@@ -128,13 +128,14 @@
   left: 0;
   top: 54px;
   border-radius: 20px;
-  background-image: url(../img/back-medium.png);
+  background-image: url(../../../build/img/back.webp);
   background-repeat: no-repeat;
   background-size: cover;
   width: 113px;
   height: 132px;
 
   @media (min-width: $medium-width) {
+    background-image: url(../../../build/img/back-medium.webp);
     width: 212px;
     height: 212px;
     top: 91px;
@@ -142,8 +143,21 @@
   }
 
   @media (min-width: $large-width) {
+    background-image: url(../../../build/img/back-large.webp);
     top: 90px;
     left: 60px;
+  }
+
+  @media (min-resolution: 2dppx) {
+    background-image: url(../../../build/img/back@2x.webp);
+  }
+
+  @media (min-resolution: 2dppx) and (min-width: $medium-width) {
+    background-image: url(../../../build/img/back-medium@2x.webp);
+  }
+
+  @media (min-resolution: 2dppx) and (min-width: $large-width) {
+    background-image: url(../../../build/img/back-large@2x.webp);
   }
 }
 
@@ -151,27 +165,42 @@
   position: absolute;
   right: 25px;
   top: 55px;
-  background-image: url(../img/smolov-back-desktop.png);
+  background-image: url(../../../build/img/smolov-back-mobile.webp);
   background-repeat: no-repeat;
   background-size: cover;
   width: 143px;
   height: 143px;
 
   @media (min-width: $medium-width) {
+    background-image: url(../../../build/img/smolov-back-tablet.webp);
     left: 40px;
     top: 446px;
   }
 
   @media (min-width: $large-width) {
+    background-image: url(../../../build/img/smolov-back-desktop.webp);
+                                           //smolov-back-desktop
     top: 154px;
     left: 547px;
+  }
+
+  @media (min-resolution: 2dppx) {
+    background-image: url(../../../build/img/smolov-back-mobile@2x.webp);
+  }
+
+  @media (min-resolution: 2dppx) and (min-width: $medium-width) {
+    background-image: url(../../../build/img/smolov-back-tablet@2x.webp);
+  }
+
+  @media (min-resolution: 2dppx) and (min-width: $large-width) {
+    background-image: url(../../../build/img/smolov-back-desktop@2x.webp);
   }
 }
 
 .users__background-image-3{
   position: absolute;
   top: 327px;
-  background-image: url(../img/rogovaya-back-desktop.png);
+  background-image: url(../../../build/img/rogovay-back);
   background-repeat: no-repeat;
   background-size: cover;
   width: 64px;
@@ -179,6 +208,7 @@
   left: 0;
 
   @media (min-width: $medium-width) {
+    background-image: url(../../../build/img/rogovaya-back-tablet.webp);
     width: 285px;
     height: 285px;
     top: 100px;
@@ -187,8 +217,21 @@
   }
 
   @media (min-width: $large-width) {
+    background-image: url(../../../build/img/rogovaya-back-desktop.webp);
     top: 406px;
     left: 190px;
+  }
+
+  @media (min-resolution: 2dppx) {
+    background-image: url(../../../build/img/rogovaya-back-mobile@2x.webp);
+  }
+
+  @media (min-resolution: 2dppx) and (min-width: $medium-width) {
+    background-image: url(../../../build/img/rogovaya-back-tablet@2x.webp);
+  }
+
+  @media (min-resolution: 2dppx) and (min-width: $large-width) {
+    background-image: url(../../../build/img/rogovaya-back-desktop@2x.webp);
   }
 }
 
