--- a/source/sass/blocks/checkbox.scss
+++ b/source/sass/blocks/checkbox.scss
@@ -26,7 +26,7 @@
   }
 
   &:checked+label::before{
-    background-image: url(../../../build/img/check.svg);
+    background-image: url(../img/check.svg);
     fill: $basic-blue;
   }
 
