--- a/source/sass/blocks/select.scss
+++ b/source/sass/blocks/select.scss
@@ -7,6 +7,8 @@
   @include text(14px, 500, 18px, $basic-blue-light);
   letter-spacing: 0.09em;
   text-transform: uppercase;
+  white-space: nowrap;
+  overflow: hidden;
 
   @media (min-width: $medium-width) {
     font-size: 20px;
