fixed font family

--- a/source/sass/global/text.scss
+++ b/source/sass/global/text.scss
@@ -6,7 +6,7 @@
 }
 
 .text{
-  font-family: "Blogger Sans", "Tahoma" sans-serif;
+  font-family: "Blogger Sans", "Tahoma", sans-serif;
   font-style: normal;
 }
 
