--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -6,6 +6,7 @@
   border: none;
   border-radius: 40px;
   text-decoration: none;
+  cursor: pointer;
 
   &:hover{
     background-color: $special-yellow-dark;
