restored broken images

--- a/source/sass/blocks/countries.scss
+++ b/source/sass/blocks/countries.scss
@@ -97,7 +97,7 @@
   }
 
   @media (min-resolution: 2dppx) and (min-width: $medium-width) {
-    background-image: url(../img/background-light@2x.webp);
+    background-image: url(../img/background-light-medium@2x.webp);
   }
 
   @media (min-resolution: 2dppx) and (min-width: $large-width) {
