--- a/source/sass/blocks/users.scss
+++ b/source/sass/blocks/users.scss
@@ -179,7 +179,6 @@
 
   @media (min-width: $large-width) {
     background-image: url(../img/smolov-back-desktop.webp);
-                                           //smolov-back-desktop
     top: 154px;
     left: 547px;
   }
@@ -200,7 +199,7 @@
 .users__background-image-3{
   position: absolute;
   top: 327px;
-  background-image: url(../img/rogovay-back);
+  background-image: url(../img/rogovaya-back-mobile.webp);
   background-repeat: no-repeat;
   background-size: cover;
   width: 64px;
