--- a/source/sass/global/text.scss
+++ b/source/sass/global/text.scss
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "Blogger Sans";
+  src: url("../fonts/bloggersans.woff2") format("woff2"),
+       url("../fonts/bloggersans.woff") format("woff");
+  font-display: swap;
+}
+
 @mixin text($font-size: 16px, $font-weight: normal, $line-height: 22px, $color: #ffffff){
   font-weight: $font-weight;
   font-size: $font-size;
@@ -6,7 +13,7 @@
 }
 
 .text{
-  font-family: "Blogger Sans", "Tahoma", sans-serif;
+  font-family: "Blogger Sans", "Tahoma";
   font-style: normal;
 }
 
