--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -101,14 +101,13 @@
   width: 74%;
   padding-right: 65px;
   border-radius: 20px;
+  @include text(18px, bold, 18px, $special-grey);
 
   @media (min-width: $medium-width) {
     height: 80px;
   }
 
   &::placeholder{
-    @include text(18px, bold, 18px, $special-grey);
-    opacity: 0.3;
     padding-left: 25px
   }
 
@@ -121,7 +120,7 @@
 
   &:hover::placeholder{
     color: $special-grey;
-    opacity: 1;
+    opacity: 0.5;
   }
 
   &:active, &:focus{
@@ -131,6 +130,10 @@
 
   &:active::placeholder, &:focus::placeholder{
     color: #ffffff;
+  }
+
+  &:invalid{
+    color: #FF0000;
   }
 }
 
