--- a/source/sass/blocks/filter.scss
+++ b/source/sass/blocks/filter.scss
@@ -251,15 +251,8 @@
   @media (min-width: $large-width) {
     display: flex;
     flex-direction: column;
-    // align-items: flex-start;
   }
 }
-
-// .filter__country{
-//   @media (min-width: $large-width) {
-//     padding-left: 95px;
-//   }
-// }
 
 .filter__countries-table{
   margin-top: 21px;
@@ -375,4 +368,30 @@
   @media (min-width: $medium-width) {
     display: none;
   }
+}
+
+.filter__item{
+  @media (max-width: $small-max-width) {
+    &:not(:last-child){
+      margin-bottom: 9px;
+    }
+  }
+
+  @media (min-width: $medium-width) {
+    margin-right: 28px;
+  }
+
+  opacity: 0.3;
+
+  &:hover{
+    opacity: 0.6;
+  }
+
+  &:active, &:focus{
+    opacity: 1;
+  }
+}
+
+.filter__item--active{
+  opacity: 1;
 }
