--- a/source/sass/blocks/step-list.scss
+++ b/source/sass/blocks/step-list.scss
@@ -65,7 +65,10 @@
 }
 
 .step-list__header-text{
-
+  @media (min-width: $large-width) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .step-list__nav{
@@ -112,7 +115,6 @@
 }
 
 .step-list__sub-list{
-  // margin-top: 21px;
   position: relative;
   z-index: 0;
 
@@ -468,17 +470,3 @@
   margin-top: 22px;
   width: 100%;
 }
-
-// .step-list__line{
-//   display: flex;
-//   justify-content: space-between;
-//   list-style-type: none;
-//   margin-inline-start: 0;
-//   margin-inline-end: 0;
-//   padding-inline-start: 0;
-// }
-
-// .step-list__line--header{
-//   padding-left: 10px;
-//   padding-right: 10px;
-// }
