--- a/source/sass/blocks/user-info.scss
+++ b/source/sass/blocks/user-info.scss
@@ -9,6 +9,7 @@
   position: relative;
 
   @media (min-width: $large-width) {
+    padding-left: 124px;
     justify-content: space-between;
     align-items: flex-start;
   }
