--- a/source/sass/blocks/countries.scss
+++ b/source/sass/blocks/countries.scss
@@ -242,6 +242,7 @@
 }
 
 .countries__item{
+  position: relative;
   width: 100%;
   height: 190px;
   margin-bottom: 10px;
@@ -258,4 +259,20 @@
   @media (min-width: $large-width) {
     min-width: 559px;
   }
+}
+
+.countries__item:last-child:after{
+  @media (min-width: $large-width) {
+    position: absolute;
+    bottom: -10px;
+    height: 81px;
+    width: 100%;
+    content: "";
+    background-image: url(../img/fade.webp);
+    pointer-events: none; /* so the text is still selectable */
+  }
+  @media (min-resolution: 2dppx) and (min-width: $large-width) {
+    background-image: url(../img/fade@2x.webp);
+  }
+
 }
