modified some styles

--- a/source/sass/blocks/add-plans.scss
+++ b/source/sass/blocks/add-plans.scss
@@ -162,7 +162,7 @@
   @media (min-width: $medium-width) {
     display: block;
     top: 27px;
-    right: 5%;
+    right: 5px;
     stroke: $basic-blue-light;
     stroke-width: 2;
     width: 14px;
