--- a/source/sass/blocks/main-menu.scss
+++ b/source/sass/blocks/main-menu.scss
@@ -14,6 +14,14 @@
 
 .main-menu--opened{
   display: flex;
+
+  @media (min-width: $large-width) {
+    display: none;
+  }
+}
+
+.main-menu--without-js{
+  position: static;
 }
 
 .main-menu--closed{
