--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -85,7 +85,9 @@
 }
 
 .page-header--menu-opened{
-  background-color: #ffffff;
+  @media (max-width: $medium-max-width) {
+    background-color: #ffffff;
+  }
 }
 
 .page-header__authorisation{
