--- a/source/sass/blocks/choose-companion.scss
+++ b/source/sass/blocks/choose-companion.scss
@@ -1,7 +1,7 @@
 .choose-companion{
   background-color: $basic-yellow;
   position: relative;
-  overflow: scroll;
+  overflow: auto;
   padding-top: 26px;
   padding-bottom: 22px;
   border-radius: 20px;
