--- a/source/sass/blocks/filter.scss
+++ b/source/sass/blocks/filter.scss
@@ -73,6 +73,10 @@
   }
 }
 
+.filter__body--without-js{
+  position: static;
+}
+
 .filter__body-container{
   padding-left: 25px;
   padding-right: 25px;
@@ -305,6 +309,10 @@
   @media (min-width: $large-width) {
     margin-top: 49px;
   }
+}
+
+.filter__close--without-js{
+  display: none;
 }
 
 .filter__close-icon{
