--- a/source/sass/blocks/business-tariffs.scss
+++ b/source/sass/blocks/business-tariffs.scss
@@ -1,10 +1,24 @@
 .business-tariffs{
+  position: absolute;
+  z-index: 13;
+  top: 3715px;
+  left: 25px;
+  right: 25px;
   background-color: #ffffff;
   padding-top: 34px;
   border-radius: 20px;
 
   @media (min-width: $medium-width) {
+    top: 4153px;
+    left: 40px;
+    right: 40px;
     padding-top: 54px;
+  }
+
+  @media (min-width: $large-width) {
+    top: 3292px;
+    left: 363px;
+    right: 327px;
   }
 }
 
