--- a/source/sass/blocks/icon.scss
+++ b/source/sass/blocks/icon.scss
@@ -38,6 +38,12 @@
     padding: 15px;
   }
 }
+.icon--footer-background-padding{
+  @media (min-width: $medium-width) {
+    padding: 21px;
+  }
+}
+
 
 .icon--active{
   fill: $basic-blue-light;
@@ -45,16 +51,6 @@
 
 .icon--disabled{
   opacity: 0.15;
-}
-
-.icon__social{
-  &:hover{
-    opacity: 0.6;
-  }
-
-  &:active, &:focus{
-    opacity: 0.3;
-  }
 }
 
 .icon--main-theme{
