--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -41,6 +41,7 @@
 @import "blocks/main-menu.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/menu.scss";
+@import "blocks/middle-menu.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/page-header.scss";
 @import "blocks/page-main.scss";
