--- a/source/sass/blocks/country-list.scss
+++ b/source/sass/blocks/country-list.scss
@@ -11,3 +11,12 @@
     line-height: 24px;
   }
 }
+
+.country-list--large{
+  display: none;
+
+  @media (min-width: $large-width) {
+    display: flex;
+    flex-direction: column;
+  }
+}
