--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,3 +1,15 @@
 .page-main--light{
   background-color: $basic-grey;
 }
+
+.page-main__companions-container{
+  padding-bottom: 116px;
+
+  @media (min-width: $medium-width) {
+    padding-bottom: 132px;
+  }
+
+  @media (min-width: $large-width) {
+    padding-bottom: 144px;
+  }
+}
